--- a/css/list_course_style.css
+++ b/css/list_course_style.css
@@ -1,4 +1,4 @@
-#courses {
+div.content {
 	width:60%;
 	margin: auto;
 	display: block;
@@ -8,16 +8,16 @@
 	background-color: #FFFFFF;
 }
 
-#courseList {
+ul#linktable {
 	list-style-type: none;
 }
 
-li {
+ul#linktable li {
 	margin: 2px;
 	font-size: 40px;
 }
 
-a.course:visited, a.course:link {
+li a:visited, a:link {
 	color: #2D9434;
 	text-decoration: none;
 }
