--- a/css/course_info.css
+++ b/css/course_info.css
@@ -1,21 +1,10 @@
-h1{
-  color: white;
+h1#course {
   margin: 0;
 }
 
 body{
   margin: 0;
   background-color: rgb(118, 184, 82);
-}
-
-#header{
-  left: 0px;
-  margin:0 auto;
-  padding:20px 0;
-  height: 100%;
-  width: 100%;
-  background-color:#3D3331;
-  min-height: 70px;
 }
 
 a.header_nav_bar {
@@ -34,33 +23,4 @@ a.header_nav_bar {
 
 a.header_nav_bar:hover {
     background-color: #4CBF50;
-}
-
-#content{
-  
-  height: 100%;
-  width: 100%;
-
-  display:flex;
-  justify-content: center;
-  margin:0px;
-   vertical-align: top;
-
-   
-}
-
-ul#linkTable{
-  margin: 20px;
-  background: white;
-  text-align: center;
-  height: 60%;
-  width: 60%;
-  list-style: none;
-  text-decoration: underline;
-  color: blue;
-}
-
-ul#linkTable li a:hover{
-  cursor : pointer;
-  color: #008ae6;
 }
